GNOME Bugzilla – Bug 782986
Bijiben 3.21.2 loses updates of notes
Last modified: 2017-06-06 00:48:42 UTC
bijiben-3.21.2-4.fc27.x86_64 including latest webkitgtk4 patches loses updates of notes when closing! Steps to reproduce: 1/ open some note in bijiben and update it 2/ close bijiben window 3/ open again the updated note in bijiben 4/ the changes from 1/ are lost bijiben-3.21.2-3.fc27.x86_64 without the latest webkitgtk4 patches works correctly. So not sure this is only downstream issues, or something is broken upstream...
Just to mention to the bijiben developers, the Fedora patch can be found here: http://pkgs.fedoraproject.org/cgit/rpms/bijiben.git/tree/bijiben-webkit2.patch It contains changes up to commit 9d9e82ca2b545e318a7ee, inclusive, +/- some changes which required adaptation.
By the way, I'm not able to reproduce this. I write some text at the end of the note, then close whole window, or use the "left-arrow" at the top of the window and in both cases the change is saved and shown the next start of bijiben. It can depend on actual memo-list provider being used in the background, maybe.
(In reply to Ondrej Holy from comment #0) > bijiben-3.21.2-4.fc27.x86_64 including latest webkitgtk4 patches loses > updates of notes when closing! > > Steps to reproduce: > 1/ open some note in bijiben and update it > 2/ close bijiben window > 3/ open again the updated note in bijiben > 4/ the changes from 1/ are lost > > bijiben-3.21.2-3.fc27.x86_64 without the latest webkitgtk4 patches works > correctly. So not sure this is only downstream issues, or something is > broken upstream... Hi, thanks for your report. Which provider are you using? Does this issue happen when using Local?
(In reply to Milan Crha from comment #1) > Just to mention to the bijiben developers, the Fedora patch can be found > here: > http://pkgs.fedoraproject.org/cgit/rpms/bijiben.git/tree/bijiben-webkit2. > patch > > It contains changes up to commit 9d9e82ca2b545e318a7ee, inclusive, +/- some > changes which required adaptation. Hi Milan, thank you! Do you know, by any chance, which are those "required adaptations"? It's a huge patch, so it would help if you be more specific. Thanks again.
I use local storage. I've built bijiben master and have the same problem. However, it seems it works correctly with notes created in the new version. So it probably affects only notes, which was not created in this version. I can see immediately on the thumbnails in the overview that the affected notes are not updated if I use "left-arrow" to close the updated note, so restarting is not needed to reproduce the bug.
(In reply to Isaque Galdino from comment #4) > Hi Milan, thank you! Do you know, by any chance, which are those "required > adaptations"? It's a huge patch, so it would help if you be more specific. I'm sorry, I do not recall, I only noticed the patch size differs for some reason. As you said, it's a huge patch to just compare it. (In reply to Ondrej Holy from comment #5) > I use local storage. I've built bijiben master and have the same problem. Ah, this makes the question void, luckily.
(In reply to Ondrej Holy from comment #5) > I use local storage. I've built bijiben master and have the same problem. > However, it seems it works correctly with notes created in the new version. > So it probably affects only notes, which was not created in this version. I > can see immediately on the thumbnails in the overview that the affected > notes are not updated if I use "left-arrow" to close the updated note, so > restarting is not needed to reproduce the bug. I had the same problem. I also use local storage and created some notes several months ago. I met the same problem if I edit those notes using the latest version. If I create some new notes with this version and edit them, it works well.
Created attachment 352916 [details] [review] note-obj: Convert webkit1 to webkit2 notes After migration to webkit2 API, when user tried to change notes created before the migration, those updates were lost. The issue was related to how old notes were saved, using different html tags for header and javascript enablement, necessary for the webkit-editor window. This code was created to detect a webkit1 note and convert it to webkit2, so webkit-editor won't get lost.
I've tested the patch and it seems it works correctly, thanks for your work!
Review of attachment 352916 [details] [review]: pushed to master